style: fix bad flex gaps

--- a/style.css
+++ b/style.css
@@ -57,12 +57,12 @@ h2 {
 }
 
 .board {
-  height: 550px;
-  width: 550px;
+  height: 530px;
+  width: 530px;
   display: grid;
   grid-template-columns: repeat(10, 1fr);
   grid-template-rows: repeat(10, 1fr);
-  gap: 0.4rem;
+  gap: 0.3rem;
 }
 
 .board .block {
@@ -169,7 +169,7 @@ h2 {
   height: 100%;
   display: flex;
   flex-direction: column;
-  gap: 0.5rem;
+  gap: 0.2rem;
 }
 
 .controlButt {
